# AMessageQueue

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeListsTemplate.txt  Makefile  Makefile.am  Makefile.in  README.md  build.sh  config.h  config.status  configure  configure.ac
AMessageQueue/: CMakeLists.txt
AMessageQueue/include/: AMessageQueue.h
AMessageQueue/src/: AMessageQueue.cpp  AMessageQueue_priv.h
AMessageQueue/src/socket/: tcp_io.cpp  tcp_protocol.cpp  tcp_protocol.h
AMessageQueue/src/utils/: string_utils.cpp
Tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  main.cpp  test.app
Tests/Test_Sample/: CMakeLists.txt
Tests/Test_Sample/src/: common.h  server.cpp
Tests/client/: Makefile  Makefile.am  Makefile.in  client  client.cpp  main.cpp
Tests/dummy/: Makefile  Makefile.am  Makefile.in  dummy_test.cpp  main.cpp  runtest.sh
Tests/server/: Makefile  Makefile.am  Makefile.in  common.h  main.cpp  server.cpp
Tests/timer/: Makefile  Makefile.am  Makefile.in  main.cpp
include/: amq.h
src/: AMessageQueue.cpp  AMessageQueue_priv.h  Makefile  Makefile.am  Makefile.in  amq_priv.h  atimer_t.cpp  context_t.cpp  message_t.cpp  protocol_t.cpp  timer_t.cpp
src/socket/: socket_utils.cpp  socket_utils.h  tcp_io.cpp  tcp_io.h  tcp_protocol.cpp  tcp_protocol.h
src/utils/: debug_utils.cpp  debug_utils.h  log_utils.cpp  log_utils.h  string_utils.cpp  utils.h
